--- a/index.html
+++ b/index.html
@@ -392,8 +392,8 @@
 									Katie Chamberlain (<a href='posters/chamberlain_slides.pdf'>slides</a>, <a href='posters/chamberlain_poster.pdf'>poster</a>)<br>
 									<i>Frequency of Dwarf Galaxy Pairs Throughout Cosmic Time</i>
 									<br>~~~<br>
-									Anirudh Chiti (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Anirudh Chiti (<a href='posters/chiti_slides.pdf'>slides</a>, <a href='posters/chiti_poster.pdf'>poster</a>)<br>
+									<i>Chemical characterization of ultra-faint dwarf galaxies using SkyMapper photometry</i>
 									<br>~~~<br>
 									Nelvy Choque-Challapa (<a href='posters/choque-challapa_poster.pdf'>poster</a>)<br>
 									<i>The Post-processing and Disruption of Substructure in Galaxy Clusters</i>
@@ -416,8 +416,8 @@
 									Dhruba Dutta Chowdhury (<a href='posters/dutta_chowdhury_slides.pdf'>slides</a>, <a href='posters/dutta_chowdhury_poster.pdf'>poster</a>)<br>
 									<i>On the Orbital Decay of Globular Clusters in NGC 1052-DF2: Testing a Baryon-Only Mass Model</i>
 									<br>~~~<br>
-                                    F. Sara Eftekhari (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+                                    F. Sara Eftekhari (<a href='posters/eftekhari_slides.pdf'>slides</a>, <a href='posters/eftekhari_poster.pdf'>poster</a>)<br>
+									<i>Spectroscopic Analysis of Dwarf Ellipticals in the Fornax Cluster</i>
 									<br>~~~<br>
 									Christoph Engler (<a href='posters/engler_slides.pdf'>slides</a>, <a href='posters/engler_poster.pdf'>poster</a>)<br>
 									<i>Satellites in Groups and Clusters with IllustrisTNG</i>
@@ -428,8 +428,8 @@
 									Ivanna Escala (<a href='posters/escala_slides.pdf'>slides</a>, <a href='posters/escala_poster.pdf'>poster</a>)<br>
 									<i>Iron and Alpha Element Abundances in the Outer Disk, Giant Southern Stream, and Inner Halo of M31</i>
 									<br>~~~<br>
-									Catherine Fielder (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Catherine Fielder (<a href='posters/fielder_slides.pdf'>slides</a>, <a href='posters/fielder_poster.pdf'>poster</a>)<br>
+									<i>Predictably Missing Satellites: Subhalo Abundance in Milky Way-like Halos</i>
 									<br>~~~<br>
 									Tobias Fritz (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>TBC</i>
@@ -453,8 +453,8 @@
 									Geraint Lewis<br>
 									<i>Two major accretion epochs in M31 from two distinct populations of globular clusters</i>
 									<br>~~~<br>
-									Zhaozhou Li (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Zhaozhou Li (<a href='posters/li_slides.pdf'>slides</a>, <a href='posters/li_poster.pdf'>poster</a>)<br>
+									<i>Milky Way Mass Profile from Satellite Dynamics</i>
 									<br>~~~<br>
 									Nicolas Longeard (<a href='posters/longeard_slides.pdf'>slides</a>, <a href='posters/longeard_poster.pdf'>poster</a>)<br>
 									<i>Characterising the nature of the faintest Milky Way satellites with the Pristine survey</i>
@@ -503,8 +503,8 @@
 									Elena Sacchi (<a href='posters/NA_slides'>slides</a>, <a href='posters/sacchi_poster.pdf'>poster</a>)<br>
 									<i>Satellites of satellites: The power of combining HST photometry and Gaia astrometry</i>
 									<br>~~~<br>
-									Matthew Smith (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Matthew Smith (<a href='posters/msmith_slides.pdf'>slides</a>, <a href='posters/msmith_poster.pdf'>poster</a>)<br>
+									<i>Detailed modelling of star formation in a galactic context and its impact on the efficiency of stellar feedback in dwarf galaxies</i>
 									<br>~~~<br>
 									Salvatore Taibi (<a href='posters/taibi_slides.pdf'>slides</a>, <a href='posters/taibi_poster.pdf'>poster</a>)<br>
 									<i>Stellar chemo-kinematics of isolated dwarf galaxies</i>
