--- a/index.html
+++ b/index.html
@@ -384,10 +384,10 @@
                                     <br>
 									<center>
 									Luca Beale (<a href='posters/beale_slides.pdf'>slides</a>, <a href='posters/beale_poster.pdf'>poster</a>)<br>
-									<i>The HI Structure of the Local Volume Dwarf Galaxy Pisces A</i><br>
+									<i>The HI Structure of the Local Volume Dwarf Galaxy Pisces A</i>
 									<br>~~~<br>
 									Paul Bennet (<a href='posters/bennet_slides.pdf'>slides</a>, <a href='posters/bennet_poster.pdf'>poster</a>)<br>
-									<i>The M101 Satellite Luminosity Function And The Halo To Halo Scatter Among Milky Way Analogues</i><br>
+									<i>The M101 Satellite Luminosity Function And The Halo To Halo Scatter Among Milky Way Analogues</i>
 									<br>~~~<br>
 									Katie Chamberlain (<a href='posters/chamberlain_slides.pdf'>slides</a>, <a href='posters/chamberlain_poster.pdf'>poster</a>)<br>
 									<i>Frequency of Dwarf Galaxy Pairs Throughout Cosmic Time</i>
