--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
 									Catherine Fielder (<a href='posters/fielder_slides.pdf'>slides</a>, <a href='posters/fielder_poster.pdf'>poster</a>)<br>
 									<i>Predictably Missing Satellites: Subhalo Abundance in Milky Way-like Halos</i>
 									<br>~~~<br>
-									Tobias Fritz (<a href='posters/NA_slides'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
-									<i>TBC</i>
+									Tobias Fritz (<a href='posters/fritz_slides.pdf'>slides</a>, <a href='posters/fritz_poster.pdf'>poster</a>)<br>
+									<i>The mass of the Milky Way from 3D velocities of 45 dwarf galaxies</i>
 									<br>~~~<br>
 									</center>
                                 </section>
@@ -596,10 +596,10 @@
                                 <section>
                                     <b>Session 8: 16:00 - 17:00</b><br>
                                     Chair: Alyson Brooks<br>
+                                    Giuliano Iorio (S)<br>
                                     Raffaele Pascale (S)<br>
                                     Isabel M. E. Santos-Santos (S)<br>
                                     Kyle Oman (S)<br>
-                                    Giuliano Iorio (S)<br>
                                 </section>
                             </div>
                             <!--<h3>Tuesday Evening</h3>-->
