--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 									Ragadeepika Pucha (<a href='posters/pucha_slides.pdf'>slides</a>, <a href='posters/pucha_poster.pdf'>poster</a>)<br>
 									<i>Do Dwarf Galaxies Have Stellar Halos? - A Case Study in IC 1613</i>
 									<br>~~~<br>
-									Daniella Roberts (<a href='posters/droberts_slides.pdf'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									Daniella Roberts (<a href='posters/roberts_slides.pdf'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
 									<i>Satellite Luminosity Function of Low-Mass Host Galaxies</i>
 									<br>~~~<br>
 									</center>
@@ -503,13 +503,13 @@
 									Elena Sacchi (<a href='posters/NA_slides'>slides</a>, <a href='posters/sacchi_poster.pdf'>poster</a>)<br>
 									<i>Satellites of satellites: The power of combining HST photometry and Gaia astrometry</i>
 									<br>~~~<br>
-									Matthew Smith (<a href='posters/msmith_slides.pdf'>slides</a>, <a href='posters/msmith_poster.pdf'>poster</a>)<br>
+									Matthew Smith (<a href='posters/smith_slides.pdf'>slides</a>, <a href='posters/smith_poster.pdf'>poster</a>)<br>
 									<i>Detailed modelling of star formation in a galactic context and its impact on the efficiency of stellar feedback in dwarf galaxies</i>
 									<br>~~~<br>
 									Salvatore Taibi (<a href='posters/taibi_slides.pdf'>slides</a>, <a href='posters/taibi_poster.pdf'>poster</a>)<br>
 									<i>Stellar chemo-kinematics of isolated dwarf galaxies</i>
 									<br>~~~<br>
-									Guillaume Thomas (<a href='posters/gthomas_slides.pdf'>slides</a>, <a href='posters/gthomas_poster.pdf'>poster</a>)<br>
+									Guillaume Thomas (<a href='posters/thomas_slides.pdf'>slides</a>, <a href='posters/thomas_poster.pdf'>poster</a>)<br>
 									<i>Chemical mapping of the stellar halo of the Milky Way</i>
 									<br>~~~<br>
 									David Williamson (<a href='posters/williamson_slides.pdf'>slides</a>, <a href='posters/williamson_poster.pdf'>poster</a>)<br>
