--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                                     <br>
 									<center>
 									Pol Massana (<a href='posters/massana_slides.pdf'>slides</a>, <a href='posters/massana_poster.pdf'>poster</a>)<br>
-									<i>Smashing The Small Magellanic Cloud</i>
+									<i>SMASHing The Small Magellanic Cloud</i>
 									<br>~~~<br>
 									Matthew Orkney (<a href='posters/orkney_slides.pdf'>slides</a>, <a href='posters/orkney_poster.pdf'>poster</a>)<br>
 									<i>Cusps and cores at the EDGE of galaxy formation</i>
