--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 									Michele De Leo (<a href='posters/de_leo_slides.pdf'>slides</a>, <a href='posters/de_leo_poster.pdf'>poster</a>)<br>
 									<i>Tearing the Small Magellanic Cloud apart</i>
 									<br>~~~<br>
-									Andres del Pino (<a href='posters/NA_slides'>slides</a>, <a href='posters/del_pino_poster.pdf'>poster</a>)<br>
+									Andres del Pino (<a href='posters/del_pino_slides.pdf'>slides</a>, <a href='posters/del_pino_poster.pdf'>poster</a>)<br>
 									<i>Do Dwarf Spheroidal Galaxies Rotate?</i>
 									</center>
 								</section>
