--- a/index.html
+++ b/index.html
@@ -428,6 +428,9 @@
 									Ivanna Escala (<a href='posters/escala_slides.pdf'>slides</a>, <a href='posters/escala_poster.pdf'>poster</a>)<br>
 									<i>Iron and Alpha Element Abundances in the Outer Disk, Giant Southern Stream, and Inner Halo of M31</i>
 									<br>~~~<br>
+									Catherine Fielder (<a href='posters/fielder_slides.pdf'>slides</a>, <a href='posters/fielder_poster.pdf'>poster</a>)<br>
+									<i>Predictably Missing Satellites: Subhalo Abundance in Milky Way-like Halos</i>
+									<br>~~~<br>
 									Tobias Fritz (<a href='posters/fritz_slides.pdf'>slides</a>, <a href='posters/fritz_poster.pdf'>poster</a>)<br>
 									<i>The mass of the Milky Way from 3D velocities of 45 dwarf galaxies</i>
 									<br>~~~<br>
@@ -438,9 +441,6 @@
                                     <b>Tuesday: 11:55-12:10</b><br>
                                     <br>
 									<center>
-									Catherine Fielder (<a href='posters/fielder_slides.pdf'>slides</a>, <a href='posters/fielder_poster.pdf'>poster</a>)<br>
-									<i>Predictably Missing Satellites: Subhalo Abundance in Milky Way-like Halos</i>
-									<br>~~~<br>
                                     Marla Geha (<a href='posters/geha_slides.pdf'>slides</a>, <a href='posters/geha_poster.pdf'>poster</a>)<br>
 									<i>Re-Reducing the Keck/DEIMOS Stellar Archive</i>
 									<br>~~~<br>
@@ -456,6 +456,9 @@
 									Nicolas Longeard (<a href='posters/longeard_slides.pdf'>slides</a>, <a href='posters/longeard_poster.pdf'>poster</a>)<br>
 									<i>Characterising the nature of the faintest Milky Way satellites with the Pristine survey</i>
 									<br>~~~<br>
+									Pol Massana (<a href='posters/massana_slides.pdf'>slides</a>, <a href='posters/massana_poster.pdf'>poster</a>)<br>
+									<i>SMASHing The Small Magellanic Cloud</i>
+									<br>~~~<br>
 									</center>
                                 </section>
                                 <section>
@@ -463,9 +466,6 @@
                                     <b>Tuesday: 12:10-12:25</b><br>
                                     <br>
 									<center>
-									Pol Massana (<a href='posters/massana_slides.pdf'>slides</a>, <a href='posters/massana_poster.pdf'>poster</a>)<br>
-									<i>SMASHing The Small Magellanic Cloud</i>
-									<br>~~~<br>
 									Matthew Orkney (<a href='posters/orkney_slides.pdf'>slides</a>, <a href='posters/orkney_poster.pdf'>poster</a>)<br>
 									<i>Cusps and cores at the EDGE of galaxy formation</i>
 									<br>~~~<br>
@@ -491,7 +491,7 @@
                                     <b>Tuesday: 15:15-15:30</b><br>
                                     <br>
 									<center>
-									Elena Sacchi (<a href='posters/NA_slides'>slides</a>, <a href='posters/sacchi_poster.pdf'>poster</a>)<br>
+									Elena Sacchi (<a href='posters/sacchi_slides.pdf'>slides</a>, <a href='posters/sacchi_poster.pdf'>poster</a>)<br>
 									<i>Satellites of satellites: The power of combining HST photometry and Gaia astrometry</i>
 									<br>~~~<br>
 									Matthew Smith (<a href='posters/smith_slides.pdf'>slides</a>, <a href='posters/smith_poster.pdf'>poster</a>)<br>
@@ -533,7 +533,7 @@
                                     James Bullock (S)<br>
                                     Andrew Graus (S)<br>
                                     Anna Nierenberg (S)<br>
-                                    Alejandro Benitez-Llambay (S)<br>
+                                    Alejandro Benitez-Llambay (S; <a href='slides/benitez-llambay.pdf'>slides</a>)<br>
                                     Calvin Sykes (S)<br>
                                     Poster presentations 1<br>
                                 </section>
