--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 									Matthew Orkney (<a href='posters/orkney_slides.pdf'>slides</a>, <a href='posters/orkney_poster.pdf'>poster</a>)<br>
 									<i>Cusps and cores at the EDGE of galaxy formation</i>
 									<br>~~~<br>
-									Sanjaya Paudel (<a href='posters/NA_slides'>slides</a>, <a href='posters/paudel_poster.pdf'>poster</a>)<br>
+									Sanjaya Paudel (<a href='posters/paudel_poster.pdf'>poster</a>)<br>
 									<i>Merging dwarf galaxies in the local universe</i>
 									<br>~~~<br>
 									Rhys Poulton (<a href='posters/poulton_slides.pdf'>slides</a>, <a href='posters/poulton_poster.pdf'>poster</a>)<br>
