--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 									Ragadeepika Pucha (<a href='posters/pucha_slides.pdf'>slides</a>, <a href='posters/pucha_poster.pdf'>poster</a>)<br>
 									<i>Do Dwarf Galaxies Have Stellar Halos? - A Case Study in IC 1613</i>
 									<br>~~~<br>
-									Daniella Roberts (<a href='posters/roberts_slides.pdf'>slides</a>, <a href='posters/NA_poster'>poster</a>)<br>
+									Daniella Roberts (<a href='posters/roberts_slides.pdf'>slides</a>, <a href='posters/roberts_poster.pdf'>poster</a>)<br>
 									<i>Satellite Luminosity Function of Low-Mass Host Galaxies</i>
 									<br>~~~<br>
 									</center>
@@ -626,7 +626,7 @@
                                 </section>
                                 <section>
                                     <b>Session 10: 10:55 - 12:40</b><br>
-                                    Chair: Ryan Cooke<br>
+                                    Chair: Risa Wechsler <br>
                                     Dan Stark (L)<br>
                                     Danielle Berg (S)<br>
                                     Brian Siana (L)<br>
