--- a/activities.html
+++ b/activities.html
@@ -58,8 +58,9 @@
 							<b>Option 3:</b> Cathedral and Durham Castle. The Cathedral is free entry, and has recently undergone restoration work. There are fabulous views if you want to climb the 325 steps to the top.
 							Durham Castle have a special <a href="https://www.dur.ac.uk/durham.castle/whatson/details/?id=24966">self-guided tour day</a>. Tickets can be purchased at the Palace Green Library (by the Castle, on the green). Last admission to the Castle will be at 3:30pm. For prices, see <a href="https://www.dur.ac.uk/durham.castle/contact/">this website</a>.<br>
 							<b>Option 4:</b> If weather permits, we'll organise a 5-mile circular walk
-								into the countryside (possibly north of the Durham city centre and through
-								Aykley Woods Local Nature Reserve).<br>
+								into the countryside. If you're happy to brave the weather in any conditions,
+							<a href="docs/long_walk_itinerary.pdf">here is a map</a> with a long walk, and
+							<a href="docs/short_walk_itinerary.pdf">here is a map</a> with a short walk.<br>
 						</p>
 					</div>
 				</section>
