--- a/activities.html
+++ b/activities.html
@@ -53,14 +53,14 @@
 							interested in joining one of these activities, sign up sheets will be available
 							at the registration desk. Alternatively, there are further suggestions
 							below that you can explore in your own time.<br>
-							<b>Option 1:</b> Botanic Gardens (everyone will be given an entry pass)<br>
-							<b>Option 2:</b> Oriental Museum (everyone will be given an entry pass)<br>
+							<b>Option 1:</b> Botanic Gardens (everyone has been given an entry pass in your conference pack)<br>
+							<b>Option 2:</b> Oriental Museum (everyone has been given an entry pass in your conference pack)<br>
 							<b>Option 3:</b> Cathedral and Durham Castle. The Cathedral is free entry, and has recently undergone restoration work. There are fabulous views if you want to climb the 325 steps to the top.
 							Durham Castle have a special <a href="https://www.dur.ac.uk/durham.castle/whatson/details/?id=24966">self-guided tour day</a>. Tickets can be purchased at the Palace Green Library (by the Castle, on the green). Last admission to the Castle will be at 3:30pm. For prices, see <a href="https://www.dur.ac.uk/durham.castle/contact/">this website</a>.<br>
 							<b>Option 4:</b> If weather permits, we'll organise a 5-mile circular walk
-								into the countryside. If you're happy to brave the weather in any conditions,
-							<a href="docs/long_walk_itinerary.pdf">here is a map</a> with a long walk, and
-							<a href="docs/short_walk_itinerary.pdf">here is a map</a> with a short walk.<br>
+								into the countryside. If you're keen to hike regardless of the weather conditions,
+							<a href="docs/long_walk_itinerary.pdf">here is a map</a> with a 5 mile walk, and
+							<a href="docs/short_walk_itinerary.pdf">here is a map</a> with a shorter walk.<br>
 						</p>
 					</div>
 				</section>
