--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                                     <b>Session 1: 09:00 - 10:30</b><br>
                                     Chair: Alis Deason<br>
                                     Welcome<br>
-                                    Alyson Brooks (L)<br>
+                                    Alyson Brooks (L; <a href='slides/brooks.pdf'>slides</a>)<br>
                                     Martin Rey (S)<br>
                                     Azi Fattahi (S)<br>
                                     Vasily Belokurov (L)<br>
@@ -530,29 +530,29 @@
                                 <section>
                                     <b>Session 2: 11:00 - 12:30</b><br>
                                     Chair: Andrew Pontzen<br>
-                                    James Bullock (S)<br>
-                                    Andrew Graus (S)<br>
-                                    Anna Nierenberg (S)<br>
+                                    James Bullock (S; <a href='slides/bullock.pdf'>slides</a>)<br>
+                                    Andrew Graus (S; <a href='slides/graus.pdf'>slides</a>)<br>
+                                    Anna Nierenberg (S; <a href='slides/nierenberg.pdf'>slides</a>)<br>
                                     Alejandro Benitez-Llambay (S; <a href='slides/benitez-llambay.pdf'>slides</a>)<br>
-                                    Calvin Sykes (S)<br>
+                                    Calvin Sykes (S; <a href='slides/sykes.pdf'>slides</a>)<br>
                                     Poster presentations 1<br>
                                 </section>
                                 <section>
                                     <b>Session 3: 14:00 - 15:30</b><br>
                                     Chair: Denis Erkal<br>
-                                    Jessie Hirtenstein (S)<br>
+                                    Jessie Hirtenstein (S; <a href='slides/hirtenstein.pdf'>slides</a>)<br>
                                     Justin Read (S)<br>
-                                    Anna Genina (S)<br>
-                                    Stacy Kim (S)<br>
-                                    Mark Lovell (S)<br>
+                                    Anna Genina (S; <a href='slides/genina.pdf'>slides</a>)<br>
+                                    Stacy Kim (S; <a href='slides/kim.pdf'>slides</a>)<br>
+                                    Mark Lovell (S; <a href='slides/lovell.pdf'>slides</a>)<br>
                                     Poster presentations 2<br>
                                 </section>
                                 <section>
                                     <b>Session 4: 16:00 - 17:00</b><br>
                                     Chair: Gurtina Besla<br>
-                                    Oliver Newton (S)<br>
-                                    Nitya Kallivayalil (L)<br>
-                                    Ekta Patel (S)<br>
+                                    Oliver Newton (S; <a href='slides/newton.pdf'>slides</a>)<br>
+                                    Nitya Kallivayalil (L; <a href='slides/kallivayalil.pdf'>slides</a>)<br>
+                                    Ekta Patel (S; <a href='slides/patel.pdf'>slides</a>)<br>
                                 </section>
                             </div>
                             <h3>Tuesday</h3>
@@ -561,34 +561,34 @@
                                     <b>Session 5: 09:00 - 10:30</b><br>
                                     Chair: Betsey Adams<br>
                                     Discussion (Gurtina Besla, Alis Deason, Andrew Pontzen)<br>
-                                    Kareem El-Badry (S)<br>
-                                    Shobita Satyapal (S)<br>
-                                    Christina Manzano-King (S)<br>
-                                    Sophie Koudmani (S)<br>
+                                    Kareem El-Badry (S; <a href='slides/elbadry.pdf'>slides</a>)<br>
+                                    Shobita Satyapal (S; <a href='slides/satyapal.pdf'>slides</a>)<br>
+                                    Christina Manzano-King (S; <a href='slides/manzano-king.pdf'>slides</a>)<br>
+                                    Sophie Koudmani (S; <a href='slides/koudmani.pdf'>slides</a>)<br>
                                 </section>
                                 <section>
                                     <b>Session 6: 11:00 - 12:30</b><br>
                                     Chair: Josh Simon<br>
-                                    Evan Kirby (S)<br>
-                                    Michelle Collins (L)<br>
-                                    Anna Wright (S)<br>
+                                    Evan Kirby (S; <a href='slides/kirby.pdf'>slides</a>)<br>
+                                    Michelle Collins (L; <a href='slides/collins.pdf'>slides</a>)<br>
+                                    Anna Wright (S; <a href='slides/wright.pdf'>slides</a>)<br>
                                     Poster presentations 3<br>
                                     Poster presentations 4<br>
                                 </section>
                                 <section>
                                     <b>Session 7: 13:55 - 15:30</b><br>
                                     Chair: James Bullock<br>
-                                    Louis Strigari (L)<br>
-                                    Laura Chang (S)<br>
+                                    Louis Strigari (L; <a href='slides/strigari.pdf'>slides</a>)<br>
+                                    Laura Chang (S; <a href='slides/chang.pdf'>slides</a>)<br>
                                     Marla Geha (L)<br>
-                                    Davide Massari (S)<br>
+                                    Davide Massari (S; <a href='slides/massari.pdf'>slides</a>)<br>
                                     Poster presentations 5<br>
                                 </section>
                                 <section>
                                     <b>Session 8: 16:00 - 17:00</b><br>
                                     Chair: Alyson Brooks<br>
-                                    Giuliano Iorio (S)<br>
-                                    Raffaele Pascale (S)<br>
+                                    Giuliano Iorio (S; <a href='slides/iorio.pdf'>slides</a>)<br>
+                                    Raffaele Pascale (S; <a href='slides/pascale.pdf'>slides</a>)<br>
                                     Isabel M. E. Santos-Santos (S)<br>
                                     Kyle Oman (S)<br>
                                 </section>
@@ -618,7 +618,7 @@
                                 <section>
                                     <b>Session 9: 9:00 - 10:25</b><br>
                                     Chair: Evan Skillman<br>
-                                    Tiffany Hsyu (S)<br>
+                                    Tiffany Hsyu (S; <a href='slides/hsyu.pdf'>slides</a>)<br>
                                     Kristen McQuinn (S)<br>
                                     Bethan James (S)<br>
                                     Nimisha Kumari (S)<br>
