--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                                     Welcome<br>
                                     Alyson Brooks (L; <a href='slides/brooks.pdf'>slides</a>)<br>
                                     Martin Rey (S)<br>
-                                    Azi Fattahi (S)<br>
+                                    Azi Fattahi (S; <a href='slides/fattahi.pdf'>slides</a>)<br>
                                     Vasily Belokurov (L)<br>
                                 </section>
                                 <section>
@@ -541,7 +541,7 @@
                                     <b>Session 3: 14:00 - 15:30</b><br>
                                     Chair: Denis Erkal<br>
                                     Jessie Hirtenstein (S; <a href='slides/hirtenstein.pdf'>slides</a>)<br>
-                                    Justin Read (S)<br>
+                                    Justin Read (S; <a href='slides/read.pdf'>slides</a>)<br>
                                     Anna Genina (S; <a href='slides/genina.pdf'>slides</a>)<br>
                                     Stacy Kim (S; <a href='slides/kim.pdf'>slides</a>)<br>
                                     Mark Lovell (S; <a href='slides/lovell.pdf'>slides</a>)<br>
@@ -580,7 +580,7 @@
                                     Chair: James Bullock<br>
                                     Louis Strigari (L; <a href='slides/strigari.pdf'>slides</a>)<br>
                                     Laura Chang (S; <a href='slides/chang.pdf'>slides</a>)<br>
-                                    Marla Geha (L)<br>
+                                    Marla Geha (L; <a href='slides/geha.pdf'>slides</a>)<br>
                                     Davide Massari (S; <a href='slides/massari.pdf'>slides</a>)<br>
                                     Poster presentations 5<br>
                                 </section>
