--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                                     Chair: Alyson Brooks<br>
                                     Giuliano Iorio (S; <a href='slides/iorio.pdf'>slides</a>)<br>
                                     Raffaele Pascale (S; <a href='slides/pascale.pdf'>slides</a>)<br>
-                                    Isabel M. E. Santos-Santos (S)<br>
+                                    Isabel M. E. Santos-Santos (S; <a href='slides/santossantos.pdf'>slides</a>)<br>
                                     Kyle Oman (S)<br>
                                 </section>
                             </div>
@@ -627,10 +627,10 @@
                                 <section>
                                     <b>Session 10: 10:55 - 12:40</b><br>
                                     Chair: Risa Wechsler <br>
-                                    Dan Stark (L)<br>
+                                    Dan Stark (L; <a href='slides/stark.pdf'>slides</a>)<br>
                                     Danielle Berg (S)<br>
-                                    Brian Siana (L)<br>
-                                    Dawn Erb (L)<br>
+                                    Brian Siana (L; <a href='slides/siana.pdf'>slides</a>)<br>
+                                    Dawn Erb (L; <a href='slides/erb.pdf'>slides</a>)<br>
                                     Leopoldo Infante (S)<br>
                                 </section>
                                 <section>
@@ -650,7 +650,7 @@
                                     <b>Session 11: 09:00 - 10:30</b><br>
                                     Chair: Kristen McQuinn<br>
                                     Discussion (Michelle Collins, Ryan Cooke, Brian Siana)<br>
-                                    Adam Smercina (S)<br>
+                                    Adam Smercina (S; <a href='slides/smercina.pdf'>slides</a>)<br>
                                     Sabrina Stierwalt (S)<br>
                                     Ana Hidalgo-Gamez (S)<br>
                                     Francesca Annibali (S)<br>
@@ -658,26 +658,26 @@
                                 <section>
                                     <b>Session 12: 11:00 - 12:35</b><br>
                                     Chair: Michelle Collins<br>
-                                    Clare Higgs (S)<br>
+                                    Clare Higgs (S; <a href='slides/higgs.pdf'>slides</a>)<br>
                                     Betsey Adams (S)<br>
-                                    Erik Tollerud (S)<br>
-                                    Sownak Bose (L)<br>
+                                    Erik Tollerud (S; <a href='slides/tollerud.pdf'>slides</a>)<br>
+                                    Sownak Bose (L; <a href='slides/bose.pdf'>slides</a>)<br>
                                     Dan Weisz (L)<br>
                                 </section>
                                 <section>
                                     <b>Session 13: 14:05 - 15:25</b><br>
                                     Chair: Ryan Cooke<br>
                                     Josh Simon (S)<br>
-                                    John Wise (L)<br>
-                                    Louise Welsh (S)<br>
+                                    John Wise (L; <a href='slides/wise.pdf'>slides</a>)<br>
+                                    Louise Welsh (S; <a href='slides/welsh.pdf'>slides</a>)<br>
                                     Else Starkenburg (L)<br>
                                 </section>
                                 <section>
                                     <b>Session 14: 15:55 - 17:00</b><br>
                                     Chair: Evan Kirby<br>
-                                    Myoungwon Jeon (S)<br>
+                                    Myoungwon Jeon (S; <a href='slides/jeon.pptx'>slides</a>)<br>
+                                    Alex Ji (L; <a href='slides/ji.pdf'>slides</a>)<br>
                                     Anna Frebel (L)<br>
-                                    Alex Ji (L)<br>
                                 </section>
                             </div>
                             <!--<h3>Thursday Evening</h3>-->
@@ -689,10 +689,10 @@
                                     <section>
                                         <b>Session 15: 09:00 - 10:25</b><br>
                                         Chair: Nitya Kallivayalil<br>
-                                        Andrew Wetzel (L)<br>
-                                        Marcel S. Pawlowski (S)<br>
+                                        Andrew Wetzel (L; <a href='slides/wetzel.pdf'>slides</a>)<br>
+                                        Marcel S. Pawlowski (S; <a href='slides/pawlowski.pdf'>slides</a>)<br>
                                         Shi Shao (S)<br>
-                                        Tony Sohn (S)<br>
+                                        Tony Sohn (S; <a href='slides/sohn.pdf'>slides</a>)<br>
                                         Alexander Riley (S)<br>
                                     </section>
                                     <section>
