--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                                     Giuliano Iorio (S; <a href='slides/iorio.pdf'>slides</a>)<br>
                                     Raffaele Pascale (S; <a href='slides/pascale.pdf'>slides</a>)<br>
                                     Isabel M. E. Santos-Santos (S; <a href='slides/santossantos.pdf'>slides</a>)<br>
-                                    Kyle Oman (S)<br>
+                                    Kyle Oman (S; <a href='slides/oman.pdf'>slides</a>)<br>
                                 </section>
                             </div>
                             <!--<h3>Tuesday Evening</h3>-->
