--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                                     Chair: Alis Deason<br>
                                     Welcome<br>
                                     Alyson Brooks (L; <a href='slides/brooks.pdf'>slides</a>)<br>
-                                    Martin Rey (S)<br>
+                                    Martin Rey (S; <a href='slides/rey.pdf'>slides</a>)<br>
                                     Azi Fattahi (S; <a href='slides/fattahi.pdf'>slides</a>)<br>
                                     Vasily Belokurov (L)<br>
                                 </section>
@@ -620,7 +620,7 @@
                                     Chair: Evan Skillman<br>
                                     Tiffany Hsyu (S; <a href='slides/hsyu.pdf'>slides</a>)<br>
                                     Kristen McQuinn (S)<br>
-                                    Bethan James (S)<br>
+                                    Bethan James (S; <a href='slides/james.pdf'>slides</a>)<br>
                                     Nimisha Kumari (S)<br>
                                     Claudia Scarlata (L)<br>
                                 </section>
@@ -628,10 +628,10 @@
                                     <b>Session 10: 10:55 - 12:40</b><br>
                                     Chair: Risa Wechsler <br>
                                     Dan Stark (L; <a href='slides/stark.pdf'>slides</a>)<br>
-                                    Danielle Berg (S)<br>
+                                    Danielle Berg (S; <a href='slides/berg.pdf'>slides</a>)<br>
                                     Brian Siana (L; <a href='slides/siana.pdf'>slides</a>)<br>
                                     Dawn Erb (L; <a href='slides/erb.pdf'>slides</a>)<br>
-                                    Leopoldo Infante (S)<br>
+                                    Leopoldo Infante (S; <a href='slides/infante.pdf'>slides</a>)<br>
                                 </section>
                                 <section>
                                     <b>Free afternoon: 14:00 - 19:00 </b><br>
@@ -651,7 +651,7 @@
                                     Chair: Kristen McQuinn<br>
                                     Discussion (Michelle Collins, Ryan Cooke, Brian Siana)<br>
                                     Adam Smercina (S; <a href='slides/smercina.pdf'>slides</a>)<br>
-                                    Sabrina Stierwalt (S)<br>
+                                    Sabrina Stierwalt (S; <a href='slides/stierwalt.pdf'>slides</a>)<br>
                                     Ana Hidalgo-Gamez (S)<br>
                                     Francesca Annibali (S)<br>
                                 </section>
@@ -667,7 +667,7 @@
                                 <section>
                                     <b>Session 13: 14:05 - 15:25</b><br>
                                     Chair: Ryan Cooke<br>
-                                    Josh Simon (S)<br>
+                                    Josh Simon (S; <a href='slides/simon.pdf'>slides</a>)<br>
                                     John Wise (L; <a href='slides/wise.pdf'>slides</a>)<br>
                                     Louise Welsh (S; <a href='slides/welsh.pdf'>slides</a>)<br>
                                     Else Starkenburg (L)<br>
@@ -691,16 +691,16 @@
                                         Chair: Nitya Kallivayalil<br>
                                         Andrew Wetzel (L; <a href='slides/wetzel.pdf'>slides</a>)<br>
                                         Marcel S. Pawlowski (S; <a href='slides/pawlowski.pdf'>slides</a>)<br>
-                                        Shi Shao (S)<br>
+                                        Shi Shao (S; <a href='slides/shishao.pdf'>slides</a>)<br>
                                         Tony Sohn (S; <a href='slides/sohn.pdf'>slides</a>)<br>
-                                        Alexander Riley (S)<br>
+                                        Alexander Riley (S; <a href='slides/riley.pdf'>slides</a>)<br>
                                     </section>
                                     <section>
                                         <b>Session 16: 10:55 - 12:20</b><br>
                                         Chair: Andrew Wetzel<br>
                                         Marius Cautun (S)<br>
                                         Nico Garavito-Camargo (S)<br>
-                                        Christine Simpson (S)<br>
+                                        Christine Simpson (S; <a href='slides/simpson.pdf'>slides</a>)<br>
                                         Ana Bonaca (L)<br>
                                         Denis Erkal (S)<br>
                                     </section>
@@ -709,10 +709,10 @@
                                         Chair: Marla Geha<br>
                                         Lydia Elias (S)<br>
                                         Chervin Laporte (S)<br>
-                                        Nora Shipp (S)<br>
-                                        Ian Roederer (S)<br>
+                                        Nora Shipp (S; <a href='slides/shipp.pdf'>slides</a>)<br>
+                                        Ian Roederer (S; <a href='slides/roederer.pdf'>slides</a>)<br>
                                         Nathan Sandford (S)<br>
-                                        Evan Skillman (S)<br>
+                                        Evan Skillman (S; <a href='slides/skillman.pdf'>slides</a>)<br>
                                     </section>
                                     <section>
                                         <b>Session 18: 16:00 - 17:00</b><br>
